fix (frontend): resolve problem with layout shifts on dropdown menu open. Link: https://www.reddit.com/r/reactjs/comments/1fjcwkh/shadcnradix_ui_scrollbar_removal_bug/

--- a/next-js-app/src/shared/styles/globals.css
+++ b/next-js-app/src/shared/styles/globals.css
@@ -121,6 +121,13 @@
     @apply bg-background text-foreground;
     overflow-x: hidden;
   }
+
+  body[data-scroll-locked][data-scroll-locked] {
+    overflow: auto !important;
+  }
+  body[data-scroll-locked] {
+    margin-right: 0 !important;
+  }
 }
 
 @layer utilities {
